[gd_scene load_steps=12 format=3 uid="uid://dp0mi4kif2o1c"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_8ajgf"]
[ext_resource type="Texture2D" uid="uid://cms51rikgj2lh" path="res://art/player_sprite.png" id="1_mt26p"]
[ext_resource type="Texture2D" uid="uid://16w0pi5fr2o6" path="res://art/player_powerup_sprite_1.png" id="3_gf8ag"]
[ext_resource type="Texture2D" uid="uid://dpyn4j48dvor1" path="res://art/green_particle.png" id="4_i7ptx"]
[ext_resource type="Texture2D" uid="uid://kufw1ymlx658" path="res://art/player_powerup_sprite_2.png" id="4_x3ewk"]
[ext_resource type="Texture2D" uid="uid://bh7bfp4iisaye" path="res://art/player_powerup_sprite_3.png" id="5_aoq7n"]
[ext_resource type="Texture2D" uid="uid://1xow0eyc1qbs" path="res://art/blue_particle.png" id="5_iy3pc"]
[ext_resource type="AudioStream" uid="uid://dd528q1vcklo3" path="res://audio/shot.mp3" id="6_yt12m"]
[ext_resource type="AudioStream" uid="uid://cw5neke6hcyqi" path="res://audio/defeat.mp3" id="7_gonii"]
[ext_resource type="AudioStream" uid="uid://qslptg2pr471" path="res://audio/enemy_defeat.mp3" id="8_m2uap"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k0pf"]
size = Vector2(32, 28)

[node name="Player" type="Area2D"]
position = Vector2(97, 325)
collision_mask = 10
script = ExtResource("1_8ajgf")
player_textures = Array[Texture2D]([ExtResource("1_mt26p"), ExtResource("3_gf8ag"), ExtResource("4_x3ewk"), ExtResource("5_aoq7n")])
invincibility = true
start_position = Vector2(95, 325)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_mt26p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_1k0pf")

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DefeatParticleEffect" type="CPUParticles2D" parent="."]
scale = Vector2(0.5, 0.5)
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.3
texture = ExtResource("4_i7ptx")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 300.0
scale_amount_min = 0.25
scale_amount_max = 0.25

[node name="LosePowerupEffect" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
one_shot = true
explosiveness = 0.75
lifetime_randomness = 1.0
texture = ExtResource("5_iy3pc")
emission_shape = 4
emission_points = PackedVector2Array(-19, -18, -19, -14, -19, -10, -19, -6, -19, -2, -19, 4, -19, 8, -19, -12, -19, 14, -19, 18, -12, 15, -12, -15, -7, -12, -7, 12, -2, -10, -2, 10, 3, -8, 3, 8, 8, 5, 8, -5, 13, 2, 13, -2, 18, 0)
emission_colors = PackedColorArray()
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
scale_amount_min = 0.1
scale_amount_max = 0.18

[node name="ShootSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_yt12m")
volume_db = -9.244
pitch_scale = 1.2

[node name="LosePowerupSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_yt12m")
pitch_scale = 0.5

[node name="DefeatSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_gonii")
pitch_scale = 0.5

[node name="ExplosionEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_m2uap")
pitch_scale = 0.5

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
